# flow-judge

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-tag-and-publish.yml  e2e-cloud-gpu.yml  e2e-local.yml  python-package.yml  test-and-lint.yml
examples/: 1_quickstart.ipynb  2_custom_evaluation_criteria.ipynb  3_evaluation_strategies.ipynb  4_llama_index_evaluators.ipynb  5_evaluate_haystack_rag_pipeline.ipynb  6_langchain_evaluators.ipynb  6_remote_quickstart.ipynb  6_using_llamafile.ipynb  7_baseten_async_quickstart.ipynb  9_evaluate_langfuse_traces.ipynb  baseten_async_new.ipynb
examples/sample_data/: csr_assistant.json
flow_judge/: __init__.py  eval_data_types.py  flow_judge.py  formatting.py  metrics.py  parsing.py
flow_judge/integrations/: haystack.py  langchain.py  llama_index.py
flow_judge/metrics/: README.md  __init__.py  metric.py  presets.py
flow_judge/metrics/_data/metrics/article_evaluation/: clarity_binary.yaml  completeness_binary.yaml  objectivity_binary.yaml  source_attribution_binary.yaml
flow_judge/metrics/_data/metrics/query_decomposition/: sub_query_coverage_3point.yaml
flow_judge/metrics/_data/metrics/response_evaluation/: correctness_3point.yaml  correctness_5point.yaml  correctness_binary.yaml  faithfulness_3point.yaml  faithfulness_5point.yaml  faithfulness_binary.yaml  relevance_3point.yaml  relevance_5point.yaml  relevance_binary.yaml
flow_judge/metrics/_data/prompts/: outputs_only.j2  standard.j2
flow_judge/models/: __init__.py  base.py  baseten.py  common.py  huggingface.py  llamafile.py  model_configs.py  model_factory.py  model_types.py  models.py  remote.py  vllm.py
flow_judge/models/adapters/: base.py  baseten.py
flow_judge/models/adapters/baseten/: README.md  adapter.py  api_auth.py  config.yaml  data_io.py  deploy.py  errors.py  gpu.py  management.py  todos.md  token_bucket.py  util.py  validation.py  webhook.py
flow_judge/models/adapters/baseten/deployment/: config.yaml
flow_judge/models/adapters/baseten/deployment/model/: __init__.py  helper.py  model.py
flow_judge/models/adapters/baseten/model/: helper.py  model.py
flow_judge/utils/: cli.py  notebook.py  prompt_formatter.py  result_writer.py  rubrics.py  validators.py
tests/: README.md  test_flow_judge.py  test_models.py  test_rubric_functionality.py  test_utils.py
tests/e2e-cloud-gpu/models/adapters/: test_baseten_e2e.py
tests/e2e-local/integrations/: test_llama_index_e2e.py
tests/integrations/: test_llama_index_e2e.py
tests/integrations/baseten/: test_baseten_model_class.py
tests/models/: test_baseten.py  test_llamafile.py  test_llamafile_e2e.py  test_llamafile_unit.py
tests/models/adapters/: baseten.py  gpu.py  validation.py
tests/unit/: test_metrics.py  test_utils.py
tests/unit/models/: test_baseten.py
tests/unit/models/adapters/: validation.py
