[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-judge"
version = "0.1.0"
description = "A small yet powerful LM Judge"
readme = "README.md"
authors = [
    {name = "Bernardo Garcia", email = "bernardo@flow-ai.com"},
    {name = "Karolus Sariola", email = "karolus@flow-ai.com"},
    {name = "Minaam Shahid", email = "minaam@flow-ai.com"},
    {name = "Tiina Vaahtio", email = "tiina@flow-ai.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["LM-judge", "evaluation", "LLMs", "AI", "benchmarking"]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.9.1",
    "requests>=2.32.3",
    "hf-transfer>=0.1.1",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "black",
    "isort",
    "pytest-cov",
    "codecov",
    "mypy>=1.11.2",
    "types-requests",
    "types-tqdm",
    "memray>=1.14.0",
    "pytest-memray>=1.7.0",
    "pytest-asyncio>=0.24.0",
]
integrations-test = [
    "llama-index",
    "llama-index-embeddings-huggingface"
]
hf = [
    "transformers>=4.45.0",
    "torch>=2.3.0",
    "bitsandbytes>=0.41.0,<=0.42.0",
    "accelerate>=0.34.2",
]
vllm = ["vllm>=0.6.2"]
llamafile = [
    "torch>=2.3.0",
    "openai>=1.51.0",
]

[project.scripts]
flow-judge = "flow_judge.utils.cli:cli"

[project.urls]
Homepage = "https://github.com/flowaicom/flow-judge"

[tool.setuptools]
packages = ["flow_judge", "flow_judge.integrations", "flow_judge.metrics", "flow_judge.models", "flow_judge.utils"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[tool.ruff]
line-length = 100
include = ["flow_judge/**/*.py", "tests/**/*.py", "setup.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ['py311']
include = '(flow_judge/.*\.py$|tests/.*\.py$|setup\.py)'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["flow_judge", "tests"]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bdist_wheel]
universal = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an asyncio coroutine",
    "memray: marks tests to be run with memray profiling",
    "e2e: marks end-to-end tests",
]
